--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
  <h1>Ez egy címsor</h1>
+ <h2>ez egy címsor 2</h2>
  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perspiciatis, ut doloribus fugiat illo ex saepe soluta aliquid dignissimos unde.</p> 
 <nav>
     <h2>Main menu</h2>
